Update few more tests to use URI